--- a/config-client/src/main/resources/application.properties
+++ b/config-client/src/main/resources/application.properties
@@ -1,5 +1,13 @@
-server.port=8866
-spring.application.name=config-client
-spring.cloud.config.env=config-clent
+#server.port=8866
+#spring.application.name=config-client
+#spring.cloud.config.env=config-clent
+#spring.cloud.config.label=master
+#spring.cloud.config.uri=http://localhost:8888/spingCloudConfServer
+server.port=8000
+#spring.application.name=foo
+spring.cloud.config.enabled=true
+spring.cloud.config.name=foo
+spring.cloud.config.env=default
 spring.cloud.config.label=master
-spring.cloud.config.uri=http://localhost:8888/spingCloudConfServer
+spring.cloud.config.uri=http://localhost:8888
+
