--- a/eureka-gateway/src/main/resources/application.properties
+++ b/eureka-gateway/src/main/resources/application.properties
@@ -7,9 +7,13 @@ eureka.client.fetchRegistry=true
 spring.application.name=gateway
 
 # routes to url
-zuul.ignored-services="*" 
-zuul.routes.trade.path=/trade/**
-zuul.routes.trade.url=http://localhost:8002/trade/
+#zuul.servlet-path=/
+#zuul.ignored-services="*"
+#zuul.routes.trade.path=/trade/**
+#zuul.routes.trade.url=http://localhost:8002/trade/
+#
+#zuul.routes.movie.path=/movie/**
+#zuul.routes.movie.url=http://localhost:8020/movie/
 
 #zuul.routes.trade.path=/trade/**
 #zuul.routes.trade.serviceId=trade
@@ -18,3 +22,5 @@ zuul.routes.trade.url=http://localhost:8002/trade/
 
 #zuul.routes.web.path=/web/**
 #zuul.routes.web.url=http://localhost:1003/web/
+zuul.routes.movie.path=/user/**
+zuul.routes.movie.serviceId=userprovider
