--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,62 @@ eureka-client/com.bins.eurekaclient.iml
 eureka-server/target/
 eureka-gateway/target/
 eureka-movie/target/
+eureka-user-provider/target/
+eureka-user-feign/target/
 .idea/workspace.xml
 eureka-movie/eurekamovie.iml
+.project
+.settings/
+config-server/.classpath
+config-client/.project
+config-client/.settings/
+config-server/.project
+config-server/.settings/
+eureka-authenticating/.project
+eureka-authenticating/.settings/
+eureka-client/.project
+eureka-client/.settings/
+eureka-feign/.project
+eureka-feign/.settings/
+eureka-gateway/.project
+eureka-gateway/.settings/
+eureka-movie/.project
+eureka-movie/.settings/
+eureka-order/.project
+eureka-order/.settings/
+eureka-server/.project
+eureka-server/.settings/
+eureka-trade/.project
+eureka-trade/.settings/
+eureka-user-feign/.project
+eureka-user-feign/.settings/
+eureka-user-provider/.project
+eureka-user-provider/.settings/
+eureka-user/.project
+eureka-user/.settings/
+sentence/.project
+sentence/.settings/
+eureka-movie/target/
+config-client/.classpath
+config-server/.gitignore
+eureka-authenticating/.classpath
+eureka-authenticating/.gitignore
+eureka-client/.classpath
+eureka-client/.gitignore
+eureka-feign/.classpath
+eureka-feign/.gitignore
+eureka-gateway/.classpath
+eureka-movie/.classpath
+eureka-order/.classpath
+eureka-order/.gitignore
+eureka-server/.classpath
+eureka-trade/.classpath
+eureka-trade/.gitignore
+eureka-user-feign/.classpath
+eureka-user-feign/.gitignore
+eureka-user-provider/.classpath
+eureka-user-provider/.gitignore
+eureka-user/.classpath
+eureka-user/.gitignore
+sentence/.classpath
+sentence/.gitignore
