--- a/shop-gateway/pom.xml
+++ b/shop-gateway/pom.xml
@@ -8,8 +8,8 @@
 	    <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>shop-gateway</artifactId>
+    <packaging>jar</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
