--- a/shop-monitor/pom.xml
+++ b/shop-monitor/pom.xml
@@ -3,14 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>com.bins.springcloud</artifactId>
-        <groupId>springcloud</groupId>
+        <artifactId>springcloud-shop</artifactId>
+        <groupId>com.bins.springcloud.shop</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>com.bins.userfeign</artifactId>
-
+    <artifactId>shop-monitor</artifactId>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
@@ -20,11 +19,6 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-feign</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>springcloud</groupId>
-            <artifactId>com.bins.user</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
