--- a/shop-search/pom.xml
+++ b/shop-search/pom.xml
@@ -8,10 +8,16 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>com.bins.search</artifactId>
+    <artifactId>shop-search</artifactId>
+    <packaging>jar</packaging>
 
     <dependencies>
+        <dependency>
+            <groupId>com.bins.springcloud.shop.user.api</groupId>
+            <artifactId>shop-user-api</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-eureka</artifactId>
