--- a/shop-trade-api/pom.xml
+++ b/shop-trade-api/pom.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
+         xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>com.bins.springcloud</groupId>
     <artifactId>springcloud-shop</artifactId>
+    <groupId>com.bins.springcloud.shop</groupId>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
-  <groupId>springcloud</groupId>
   <artifactId>shop-trade-api</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
-  <name>shop-trade-api</name>
-  <url>http://maven.apache.org</url>
+  <packaging>jar</packaging>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
