--- a/shop-trade/src/main/resources/application.properties
+++ b/shop-trade/src/main/resources/application.properties
@@ -5,3 +5,47 @@ eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
 #service name
 spring.application.name=shop-trade
+
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/bins_oa?useUnicode=yes&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=123456
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/user
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.type: com.alibaba.druid.pool.DruidDataSource
+
+#Druid\u8FDE\u63A5\u6C60
+# \u521D\u59CB\u5316\u5927\u5C0F\uFF0C\u6700\u5C0F\uFF0C\u6700\u5927
+spring.datasource.druid.initial-size=10
+spring.datasource.druid.min-idle=5
+spring.datasource.druid.max-active=2500
+# \u914D\u7F6E\u83B7\u53D6\u8FDE\u63A5\u7B49\u5F85\u8D85\u65F6\u7684\u65F6\u95F4
+spring.datasource.druid.maxWait=60000
+# \u914D\u7F6E\u95F4\u9694\u591A\u4E45\u624D\u8FDB\u884C\u4E00\u6B21\u68C0\u6D4B\uFF0C\u68C0\u6D4B\u9700\u8981\u5173\u95ED\u7684\u7A7A\u95F2\u8FDE\u63A5\uFF0C\u5355\u4F4D\u662F\u6BEB\u79D2
+spring.datasource.druid.timeBetweenEvictionRunsMillis=60000
+# \u914D\u7F6E\u4E00\u4E2A\u8FDE\u63A5\u5728\u6C60\u4E2D\u6700\u5C0F\u751F\u5B58\u7684\u65F6\u95F4\uFF0C\u5355\u4F4D\u662F\u6BEB\u79D2
+spring.datasource.druid.minEvictableIdleTimeMillis=300000
+spring.datasource.druid.validationQuery=SELECT 1 FROM DUAL
+spring.datasource.druid.testWhileIdle=true
+spring.datasource.druid.testOnBorrow=true
+spring.datasource.druid.testOnReturn=false
+#\u6570\u636E\u5E93\u65AD\u5F00\u540E\u81EA\u52A8\u8FDE\u63A5
+spring.datasource.druid.log-abandoned=true
+spring.datasource.druid.remove-abandoned=false
+spring.datasource.druid.remove-abandoned-timeout-millis=1800
+# \u6253\u5F00PSCache\uFF0C\u5E76\u4E14\u6307\u5B9A\u6BCF\u4E2A\u8FDE\u63A5\u4E0APSCache\u7684\u5927\u5C0F
+spring.datasource.druid.poolPreparedStatements=true
+spring.datasource.druid.maxPoolPreparedStatementPerConnectionSize=20
+# \u914D\u7F6E\u76D1\u63A7\u7EDF\u8BA1\u62E6\u622A\u7684filters\uFF0C\u53BB\u6389\u540E\u76D1\u63A7\u754C\u9762sql\u65E0\u6CD5\u7EDF\u8BA1\uFF0C'wall'\u7528\u4E8E\u9632\u706B\u5899
+spring.datasource.druid.filters=stat,wall,slf4j
+# \u901A\u8FC7connectProperties\u5C5E\u6027\u6765\u6253\u5F00mergeSql\u529F\u80FD\uFF1B\u6162SQL\u8BB0\u5F55
+spring.datasource.druid.connectionProperties=druid.stat.mergeSql=true
+
+# mybatis
+# mybatis.type-aliases-package=com.bins.inventory
+mybatis.config-location=classpath:mybatis-config.xml
+# mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
