--- a/shop-monitor/pom.xml
+++ b/shop-monitor/pom.xml
@@ -12,6 +12,11 @@
     <packaging>jar</packaging>
 
     <dependencies>
+    	<dependency>
+			<groupId>com.bins.springcloud.shop.user.api</groupId>
+			<artifactId>shop-user-api</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-openfeign-core</artifactId>
