--- a/shop-common/pom.xml
+++ b/shop-common/pom.xml
@@ -19,6 +19,13 @@
             <artifactId>lombok</artifactId>
             <version>1.18.12</version>
         </dependency>
+        
+        <dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper-spring-boot-starter</artifactId>
+			<version>1.2.13</version>
+		</dependency>
+		
     </dependencies>
 
 </project>
