--- a/shop-gateway/src/main/resources/application.yml
+++ b/shop-gateway/src/main/resources/application.yml
@@ -6,6 +6,13 @@ spring:
     name: gateway
   cloud:
     gateway:
+      globalcors:
+        corsConfigurations:
+          '[/**]':
+            allowedOrigins: "*"
+            allowedMethods: "*"
+            allowedHeaders: "*"
+      default-filters[0]: DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Credentials,RETAIN_FIRST
       routes:
         - id: shop-user
           uri: http://localhost:8003/
