--- a/shop-order/pom.xml
+++ b/shop-order/pom.xml
@@ -28,6 +28,12 @@
 			<artifactId>shop-user-api</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.bins.springcloud.shop.supplier</groupId>
+			<artifactId>shop-supplier-api</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.bins.springcloud.shop.common</groupId>
