--- a/shop-order/src/main/resources/application.properties
+++ b/shop-order/src/main/resources/application.properties
@@ -6,6 +6,7 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 spring.application.name=shop-order
+spring.main.allow-bean-definition-overriding=true
 ribbon.eureka.enabled=true
 ribbon.ReadTimeout=120000
 ribbon.ConnectTimeout=30000
