--- a/shop-supplier/pom.xml
+++ b/shop-supplier/pom.xml
@@ -20,6 +20,13 @@
 	</properties>
 
 	<dependencies>
+	
+		<dependency>
+			<groupId>com.bins.springcloud.shop.user.api</groupId>
+			<artifactId>shop-user-api</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>com.bins.springcloud.shop.supplier</groupId>
 			<artifactId>shop-supplier-api</artifactId>
@@ -43,6 +50,10 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
