--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-    
+
     <repositories>
 		<repository>
 			<id>spring-snapshots</id>
@@ -83,7 +83,10 @@
 		<repository>
 			<id>spring-milestones</id>
 			<name>Spring Milestones</name>
-			<url>https://repo.spring.io/milestone</url>
+			<url>https://repo.spring.io/libs-milestone/</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
 		</repository>
 		<!-- <repository>
             <id>spring-milestones</id>
